--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,10 @@ body {
 	justify-content: space-evenly;
 	background-color: black;
 	width: 100vw;
-	height: 800px;
+	/* height: 800px; */
 	z-index: 0;
 	margin-top: 45px;
+	position: relative;
 }
 
 .leftTop {
@@ -53,6 +54,20 @@ body {
 	padding-right: 0%;
 	z-index: 1;
 	margin-top: 0px;
+}
+
+.webshowsection {
+	position: relative;
+	display: flex;
+	/* flex-wrap: wrap; */
+	/* flex-direction: row; */
+	width: 100vw;
+	/* height: 10%; */
+	background-color: #538dbd;
+	align-items: center;
+	justify-content: center;
+	z-index: 0;
+	/* position: static; */
 }
 
 .whyvideosection {
