--- a/src/components/button.css
+++ b/src/components/button.css
@@ -61,18 +61,21 @@
   }
 
 .appleimg {
-  height: 50px;
-  width: 160px;
+  height: 80px;
+    width: 210px;
+    /* background-color: indigo; */
 }
 
 .googleimg {
-    height: 50px;
-    width: 160px;
+  height: 80px;
+  width: 210px;
+  /* background-color: khaki; */
   }
 
   .mantaimg{
-    height: 50px;
-    width: 160px;
+    height: 80px;
+    width: 210px;
+    /* background-color: lawngreen; */
   }
 
   @media only screen and (max-width: 500px) {
