--- a/src/components/logo.css
+++ b/src/components/logo.css
@@ -5,7 +5,7 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  background-color: #355d71;
+  background-color: #538dbd;
   height: 45px;
   width: 100vw;
   top: 0;
