--- a/src/components/webVid.css
+++ b/src/components/webVid.css
@@ -59,11 +59,12 @@
 
     .compskin{
         height: 525px;
-        margin-top: -50px;
+        margin-top: -60px;
+        margin-bottom: 150px;
     }
 
     .vidsizes{
-        margin-top: -555px;
+        margin-top: -655px;
         margin-left: 70px;
       }
 
@@ -99,7 +100,6 @@
         font-family: 'Overlock', cursive;
         font-size: 18px;
         max-width: 100%;
-        background-color: pink;
     }
 
 }
@@ -108,6 +108,15 @@
     .compskin{
         height: 350px;
         /* width: 425px; */
+    }
+
+    .comptext{
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+        font-family: 'Overlock', cursive;
+        font-size: 18px;
+        max-width: 80%;
     }
 
 }
@@ -127,6 +136,15 @@
         justify-content: center;
         margin: 0px;
         height: 800px;
+    }
+
+    .comptext{
+        display: flex;
+        flex-direction: column;
+        margin-top: -30px;
+        font-family: 'Overlock', cursive;
+        font-size: 18px;
+        max-width: 80%;
     }
 
 }
