--- a/src/components/videobox.css
+++ b/src/components/videobox.css
@@ -13,6 +13,7 @@
   border-radius: 15px;
   overflow: hidden;
   /* background-color: tr; */
+  margin: 50px;
 
 }
 
@@ -53,8 +54,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 30%;
+    margin-top: 40%;
     margin-left: 0px;
+    margin-right: 0px;
     padding-left: 0px;
   }
 }
