--- a/src/components/emilio.css
+++ b/src/components/emilio.css
@@ -1,105 +1,40 @@
-
-.wrapperdiv{
+.videoboxMini{
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 90%;
+    justify-content: center;
+    width: 300px;
+    align-self: center;
+    justify-self: center;
+    border-radius: 15px;
+    margin: 30px;
+    /* background-color: green; */
 }
 
-.leftside{
-    position: sticky;
-    top: 0;
-    color: #000;
-    width: 40%;
-    min-width: 300px;
-    padding-top: 25px;
-    margin-top: 10%;
-    margin-left: 8%;
-    margin-bottom: 5%;
-    align-self: start;
-}
-
-.childtext{
-    margin-top: -15px;
-    font-size: 40px;
-}
-
-.rightside{
-    display: flex;
-    color: #000;
-    width: 350px;
-    align-items: flex-end;
-    text-align: right;
-    justify-content: flex-end;
-    min-width: 300px;
+.emilioBox{
+    width: 700px;
+    margin-right: 200px;
+    /* background-color: purple; */
 
 }
 
-.headertext{
-    font-family: 'Overlock', cursive;
-    font-size: 22px;
-}
+@media only screen and (max-width: 800px) {
 
-.childtext{
-    font-family: 'Spinnaker', sans-serif;
-    font-size: 14px;
+    .emilioBox{
+        width: 400px;
+        margin-right: 0px;
+        /* background-color: purple; */
+    
+    }
+    
 }
-
-@media only screen and (min-width: 800px) {
-    .emilioBox {
-        width: 200%;
-        height: 200%;
-        margin-top: -50%;
-        margin-right: 100%;
-    } 
-}
-
 
 @media only screen and (max-width: 500px) {
 
-    .wrapperdiv{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        width: 80vw;
+    .emilioBox{
+        width: 400px;
+        margin-top: -100px;
+        /* background-color: purple; */
+    
     }
     
-    .leftside{
-        position: relative;
-        color: #000;
-        /* width: 80vw; */
-        align-items: center;
-        text-align: center;
-        max-width: 350px;
-        height: 100px;
-    }
-
-    .headertext{
-        font-size: 18px;
-        width: 80vw;
-        text-align: left;
-    }
-    
-    .childtext{
-        margin-top: -15px;
-        font-size: 11px;
-        width: 80vw;
-        max-width: 350px;
-        text-align: left;
-        font-size: 14px;
-    }
-    
-    .rightside{
-        position: relative;
-        top: 0;
-        color: #000;
-        align-items: center;
-        text-align: center;
-        /* margin-top: -100px; */
-        /* margin-left: 60%; */
-        /* padding-top: -25px; */
-    }
-
 }
