--- a/src/components/miniplayer.css
+++ b/src/components/miniplayer.css
@@ -7,12 +7,13 @@
     justify-self: center;
     border-radius: 15px;
     margin: 30px;
-    background-color: "green";
+    /* background-color: green; */
 }
 
 .workahole{
     height: 400px;
     border-radius: 10px;
+    background-color: plum;
 }
 
 .tutvideo{
@@ -20,21 +21,6 @@
     overflow: hidden;
 }
 
-.emilioBox {
-    width: 200%;
-    height: 200%;
-    margin-top: -50%;
-}
-
-@media only screen and (min-width: 800px) {
-    .emilioBox {
-        width: 200%;
-        height: 200%;
-        margin-top: -50%;
-        margin-right: 100%;
-        background-color: green;
-    } 
-}
 
 @media only screen and (max-width: 500px) {
 
@@ -51,13 +37,6 @@
     .workahole{
         height: 275px;
         border-radius: 10px;
-    }
-
-    .emilioBox {
-        width: 100%;
-        height: 100%;
-        margin-top: -30%;
-        margin-bottom: -30%;
     }
     
 }
