--- a/src/components/videobox.css
+++ b/src/components/videobox.css
@@ -3,32 +3,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 360px;
+  width: 350px;
   height: 750px;
   margin-left: 0px;
-  border-radius: 50px;
+  border-radius: 60px;
   z-index: 5;
-  margin-top: -0px;
-  /* padding-left: 40px; */
-  border-radius: 15px;
   overflow: hidden;
-  /* background-color: tr; */
   margin: 50px;
-
 }
 
 .mainvideo {
-  height: 715px;
-  width: 400px;
+  height: 100%;
+  width: 100%;
   z-index: -1;
-  /* margin-left: -90px; */
-  padding-left: -50px;
   margin-top: 0px;
-  background-color: #538bdb;
-  border-radius: 55px;
+  border-radius: 10px;
   overflow: hidden;
-  /* background-color: blueviolet; */
-  scroll-snap-type: mandatory;
+  object-fit: contain;
 }
 
 .phoneskin {
@@ -40,9 +31,9 @@
   /* background-color: orange; */
 }
 
-.blackout{
+.blackout {
   background-color: black;
-  width:290px;
+  width: 290px;
   height: 5px;
   z-index: 2;
   margin-top: 6px;
@@ -75,19 +66,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -50%;
-    /* margin-bottom: 50%; */
-    margin-left: 0px;
-    padding-left: 0px;
+    margin-top: -25%;
+    border-radius: 60px;
+    z-index: 5;
+    overflow: hidden;
     /* background-color: pink; */
     position: relative;
-  }
-
-  .mainvideo {
-    height: 260px;
-    width: 200px;
-    z-index: 0;
-    border-radius: 35px;
   }
 
   .phoneskin {
@@ -97,14 +81,12 @@
     margin-left: 0px;
     z-index: 3;
     position: absolute;
-
   }
 
-  .blackout{
+  .blackout {
     background-color: black;
     width: 0px;
     height: 0px;
     z-index: 2;
-    
   }
 }
