--- a/src/App.css
+++ b/src/App.css
@@ -1,95 +1,103 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&display=swap");
 
 body {
-	background-color: #add8e6;
-	overflow-x: hidden;
-	position: relative;
+  background-color: #add8e6;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .wrapperdivMain {
-	width: 100vw;
-	overflow-x: hidden;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .mainherovideo {
-	z-index: 0;
-	position: absolute;
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
+  z-index: 0;
+  position: absolute;
+	top: 45px;
+  object-fit: cover;
+  width: 100%;
+  /* height: 100vh; */
 }
 
 .topsection {
+  background-color: powderblue;
+  width: 100%;
+  height: 100vh;
+  margin-top: 45px;
+}
+
+.switchBox{
+	position: absolute;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	/* flex-wrap: wrap; */
-	background-color: black;
-	width: 100%;
-	height: 100vh;
-	margin-top: 40px;
+	flex-direction: row;
+	flex-wrap: wrap;
+	left: 0;
+	top: 45px;
+	width: 100vw;
+	margin-top: -20px;
+	/* background-color: blueviolet; */
 }
 
 .leftTop {
-	position: absolute;
-	left: 0;
-	display: flex;
-	flex-direction: column;
-	width: 50%;
-	height: 100vh;
-	align-items: center;
-	justify-content: center;
-	padding-right: 0%;
-	z-index: 1;
-	/* background-color: pink; */
+  /* position: absolute; */
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 50vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: -20px; */
+  z-index: 1;
+  /* background-color: pink; */
 }
 
 .rightTop {
-	position: absolute;
-	left: 50vw;
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-	width: 50%;
-	align-items: center;
-	justify-content: center;
-	padding-right: 0%;
-	z-index: 1;
-	margin-top: 0px;
-	/* background-color: powderblue; */
+  /* position: absolute; */
+  left: 50vw;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: -20px; */
+  z-index: 1;
+  margin-top: 0px;
+  /* background-color: powderblue; */
 }
 
 .webshowsection {
-	position: relative;
-	display: flex;
-	/* flex-wrap: wrap; */
-	/* flex-direction: row; */
-	width: 100vw;
-	height: 60vw;
-	background-color: #538dbd;
-	align-items: center;
-	justify-content: center;
-	z-index: 0;
-	/* position: static; */
+  position: relative;
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* flex-direction: row; */
+  width: 100vw;
+  height: 60vw;
+  background-color: #538dbd;
+  align-items: center;
+  justify-content: center;
+  /* z-index: 0; */
+  /* position: static; */
 }
 
 .whyvideosection {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
-	padding-bottom: 50px;
-	z-index: 0;
-	position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 50px;
+  z-index: 0;
+  position: relative;
 }
 
 /* Large desktop styles */
 @media only screen and (min-width: 1750px) {
-
-	 /* .mainherovideo {
+  /* .mainherovideo {
 		margin-top: -200px;
 	}
 
@@ -97,206 +105,232 @@ body {
 		flex-direction: column;
 	}  */
 
-	.leftTop {
+  /* .leftTop {
 		max-width: 40%;
 		margin-top: 00px;
-	}
+	} */
 
-	.headLineBox {
-		margin-bottom: 6%;
-		font-size: calc(20px + 3vw);
-	}
+  /* .headLineBox {
+    margin-bottom: 6%;
+    font-size: calc(20px + 3vw);
+  }
 
-	.subLineBox {
-		line-height: 150%;
-	}
+  .subLineBox {
+    line-height: 150%;
+  } */
 }
 
-
 /* Tablet styles */
-@media only screen and (max-width: 880px) {
-	/* .mainherovideo {
+@media only screen and (max-width: 900px) {
+  /* .mainherovideo {
 		min-height: 400px;
 		max-height: 750px;
 	} */
 
-	.topsection {
-		flex-direction: row;
+  .topsection {
+    background-color: powderblue;
+    width: 100%;
+    height: 160vh;
+    margin-top: 30px;
+  }
+
+	.switchBox{
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		left: 0;
+		top: 45px;
+		width: 100Vw;
 	}
 
 	.leftTop {
+		/* position: absolute; */
+		left: 0;
 		display: flex;
 		flex-direction: column;
-		max-width: 500px;
-		min-width: 420px;
-		max-height: 650px;
+		width: 100vw;
+		height: 70vh;
 		align-items: center;
 		justify-content: center;
 		padding-right: 0%;
-		margin-top: -150px;
+		z-index: 1;
+		/* background-color: pink; */
 	}
-
+	
 	.rightTop {
-		margin-top: -160px;
-		min-width: 420px;
-		height: 1000px;
+		/* position: absolute; */
+		left: 50vw;
+		display: flex;
+		flex-direction: column;
+		height: 90vh;
+		width: 100vw;
+		align-items: center;
+		justify-content: center;
+		padding-right: 0%;
+		z-index: 1;
+		margin-top: 0px;
+		background-color: powderblue;
 	}
 
-	.headLineBox {
-		max-width: 80%;
-	}
+  .headLineBox {
+    max-width: 80%;
+  }
 }
 
 .joinusT {
-	margin-bottom: -50px;
-	margin-left: -5px;
-	font-size: 20px;
-	font-weight: bolder;
-	color: white;
+  margin-bottom: -50px;
+  margin-left: -5px;
+  font-size: 20px;
+  font-weight: bolder;
+  color: white;
 }
 
 .whyvideosection {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
-	padding-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 50px;
 }
 
 .midsection {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
 }
 
 .bottomsection {
-	display: flex;
-	flex-direction: column;
-	background-color: #add8e6;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #add8e6;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .joinus {
-	margin-bottom: -10px;
-	margin-left: -5px;
-	font-size: 30px;
-	color: white;
+  margin-bottom: -10px;
+  margin-left: -5px;
+  font-size: 30px;
+  color: white;
 }
 
 /* Mobile styles */
 @media only screen and (max-width: 500px) {
-	body {
-		overflow-x: hidden !important;
-		max-width: 100vw !important;
-	}
-
-	/* .topsection {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		background-color: #add8e6;
-		margin-top: -2%;
-		width: 100vw;
-		height: 850px;
-		max-width: 100%;
-		min-width: 100%;
-	}
+  body {
+    overflow-x: hidden !important;
+    max-width: 100vw !important;
+  }
+  .topsection {
+    background-color: powderblue;
+    width: 100%;
+    height: 130vh;
+    margin-top: 30px;
+  }
 
 	.mainherovideo {
+		/* z-index: 100; */
 		position: absolute;
-		top: 0;
-		z-index: 0;
-		max-height: 430px;
-		min-height: 430px;
-		margin-top: 0px;
-		margin-left: 20%;
-	} */
+		top: 30px;
+		object-fit: cover;
+		width: 100%;
+		height: 100vh;
+	}
+
+	.switchBox{
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		left: 0;
+		top: 30px;
+		width: 100Vw;
+	}
 
 	.leftTop {
 		display: flex;
 		flex-direction: column;
-		flex-wrap: wrap;
 		width: 100vw;
-		max-height: 700px;
-		max-width: 100%;
-		min-width: 100%;
-		margin-top: -220px;
-		margin-bottom: 40px;
+		height: 50vh;
+		align-items: center;
+		justify-content: center;
+		margin-top: -20px;
+		z-index: 1;
+		/* background-color: pink; */
 	}
+	
 	.rightTop {
 		display: flex;
 		flex-direction: column;
-		flex-wrap: wrap;
-		width: 100vw;
-		margin-top: -167px;
-		min-height: auto;
-		justify-content: center;
-		text-align: center;
-	}
-
-	.webshowsection {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		margin-top: 270px;
-		width: 100vw;
-		height: 35vh;
-		background-color: #538bdb;
-		align-items: center;
-		justify-content: center;
-		z-index: 0;
-		/* position: static; */
-	}
-
-	.joinusT {
-		margin-bottom: -50px;
-		margin-left: -5px;
-		font-size: 18px;
-		font-weight: bolder;
-		width: 80vw;
-		justify-content: center;
-		text-align: center;
-	}
-
-	.midsection {
-		display: flex;
-		flex-wrap: wrap;
-		width: 100vw;
-		background-color: white;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.bottomsection {
-		display: flex;
-		flex-direction: column;
-		background-color: #add8e6;
+		height: 50vh;
 		width: 100vw;
 		align-items: center;
 		justify-content: center;
-	}
-	.joinus {
-		margin-bottom: -10px;
-		margin-left: -5px;
-		font-size: 30px;
-		width: 80vw;
-		font-size: 18px;
-		justify-content: center;
-		text-align: center;
+		z-index: 1;
+		padding-top: 45%;
+		/* background-color: green; */
 	}
 
-	.whyvideosection {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: row;
-		width: 100vw;
-		background-color: white;
-	}
+  /* .webshowsection {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-top: 270px;
+    width: 100vw;
+    height: 35vh;
+    background-color: #538bdb;
+    align-items: center;
+    justify-content: center;
+    z-index: 0;
+    /* position: static; */
+  /* } */ */
+
+  .joinusT {
+    margin-bottom: -50px;
+    margin-left: -5px;
+    font-size: 18px;
+    font-weight: bolder;
+    width: 80vw;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .midsection {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottomsection {
+    display: flex;
+    flex-direction: column;
+    background-color: #add8e6;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+  }
+  .joinus {
+    margin-bottom: -10px;
+    margin-left: -5px;
+    font-size: 30px;
+    width: 80vw;
+    font-size: 18px;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .whyvideosection {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100vw;
+    background-color: white;
+  }
 }
