--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
 	top: 45px;
   object-fit: cover;
   width: 100%;
-  /* height: 100vh; */
+  margin-top: -20%;
+	margin-left: -40%;
 }
 
 .topsection {
