--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@ body {
   position: absolute;
 	top: 45px;
   object-fit: cover;
-  width: 100%;
-  margin-top: -20%;
-	margin-left: -40%;
+  width: 100vw;
+  height: 100vw*(9/16)
+  /* margin-top: -20%;
+	margin-left: -40%; */
 }
 
 .topsection {
