--- a/src/App.css
+++ b/src/App.css
@@ -1,300 +1,349 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&display=swap");
 
 body {
-	background-color: #add8e6;
-	overflow-x: hidden;
-	position: relative;
+  background-color: #add8e6;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .wrapperdivMain {
-	width: 100vw;
-	overflow-x: hidden;
-}
-
-.mainherovideo {
-	position: absolute;
-	top: 45;
-	z-index: 0;
-	object-fit: cover;
-	margin-top: -200px;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .topsection {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	background-color: black;
-	width: 100vw;
-	/* height: 800px; */
-	z-index: 0;
-	margin-top: 45px;
-	position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #538dbd;
+  width: 100vw;
+  height: 177.78vh;
+  max-height: 100vh;
+  margin-top: 45px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mainherovideo {
+  /* position: absolute;
+top: 0;
+	left: 0; */
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  /* margin-top: -20%;
+	margin-left: -40%; */
+}
+
+.switchBox {
+  /* position: absolute; */
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  left: 0;
+  top: 45px;
+  width: 100vw;
+  height: 177.78vh;
+  max-height: 100vh;
+  /* margin-top: -20px; */
+  /* background-color: blueviolet; */
 }
 
 .leftTop {
-	display: flex;
-	flex-direction: column;
-	max-width: 450px;
-	min-width: 400px;
-	height: 800px;
-	align-items: center;
-	justify-content: center;
-	padding-right: 0%;
-	z-index: 1;
-	margin-top: -100px;
+  /* position: absolute; */
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: 45px; */
+  z-index: 1;
+  /* background-color: pink; */
 }
 
 .rightTop {
-	display: flex;
-	flex-direction: column;
-	max-width: 500px;
-	min-width: 420px;
-	align-items: center;
-	justify-content: center;
-	padding-right: 0%;
-	z-index: 1;
-	margin-top: 0px;
+  /* position: absolute; */
+  left: 50vw;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: 45px; */
+  z-index: 1;
+  /* background-color: powderblue; */
 }
 
 .webshowsection {
-	position: relative;
-	display: flex;
-	/* flex-wrap: wrap; */
-	/* flex-direction: row; */
-	width: 100vw;
-	/* height: 10%; */
-	background-color: #538dbd;
-	align-items: center;
-	justify-content: center;
-	z-index: 0;
-	/* position: static; */
+  position: relative;
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* flex-direction: row; */
+  width: 100vw;
+  height: 60vw;
+  background-color: #538dbd;
+  align-items: center;
+  justify-content: center;
+  /* z-index: 0; */
+  /* position: static; */
 }
 
 .whyvideosection {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
-	padding-bottom: 50px;
-	z-index: 0;
-	position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 50px;
+  z-index: 0;
+  position: relative;
 }
 
 /* Large desktop styles */
 @media only screen and (min-width: 1750px) {
-
-	.mainherovideo {
+  /* .mainherovideo {
 		margin-top: -200px;
 	}
 
 	.topsection {
-		justify-content: center;
-		height: 1000px;
-	}
+		flex-direction: column;
+	}  */
 
-	.leftTop {
+  /* .leftTop {
 		max-width: 40%;
 		margin-top: 00px;
-	}
-
-	.headLineBox {
-		margin-bottom: 6%;
-		font-size: calc(20px + 3vw);
-	}
-
-	.subLineBox {
-		line-height: 150%;
-	}
-}
-
-
-/* Tablet styles */
-@media only screen and (max-width: 880px) {
-	/* .mainherovideo {
-		min-height: 400px;
-		max-height: 750px;
 	} */
 
-	.topsection {
-		height: 1300px;
-		background-color: #add8e6;
-	}
+  /* .headLineBox {
+    margin-bottom: 6%;
+    font-size: calc(20px + 3vw);
+  }
 
-	.leftTop {
-		display: flex;
-		flex-direction: column;
-		max-width: 500px;
-		min-width: 420px;
-		max-height: 650px;
-		align-items: center;
-		justify-content: center;
-		padding-right: 0%;
-		margin-top: -150px;
-	}
+  .subLineBox {
+    line-height: 150%;
+  } */
+}
 
-	.rightTop {
-		margin-top: -160px;
-		min-width: 420px;
-		height: 1000px;
-	}
+/* Tablet styles */
+@media only screen and (max-width: 900px) {
+  .topsection {
+    position: absolute;
+    width: 100vw;
+    height: 177.78vh;
+    max-height: 100vh;
+  }
 
-	.headLineBox {
-		max-width: 80%;
-	}
+  .mainherovideo {
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+  }
+
+  .switchBox {
+    /* position: absolute; */
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    top: 45px;
+    width: 100vw;
+    height: 177.78vh;
+    max-height: 120vh;
+  }
+
+  .leftTop {
+    /* position: absolute; */
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 88.89vh;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5%;
+    z-index: 1;
+    /* background-color: pink; */
+  }
+
+  .rightTop {
+    /* position: relative; */
+    left: 50vw;
+    display: flex;
+    flex-direction: column;
+    height: 88.89vh;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    padding-top: 4%;
+    padding-bottom: 5%;
+    background-color: powderblue;
+  }
+
+  .webshowsection {
+    /* position: relative; */
+    width: 100vw;
+    height: 80vw;
+    z-index: 1;
+    /* margin-top: 68vh; */
+  }
+
+  .headLineBox {
+    max-width: 80%;
+  }
 }
 
 .joinusT {
-	margin-bottom: -50px;
-	margin-left: -5px;
-	font-size: 20px;
-	font-weight: bolder;
-	color: white;
+  margin-bottom: -50px;
+  margin-left: -5px;
+  font-size: 20px;
+  font-weight: bolder;
+  color: white;
 }
 
 .whyvideosection {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
-	padding-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 50px;
 }
 
 .midsection {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	background-color: white;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
 }
 
 .bottomsection {
-	display: flex;
-	flex-direction: column;
-	background-color: #add8e6;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #add8e6;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .joinus {
-	margin-bottom: -10px;
-	margin-left: -5px;
-	font-size: 30px;
-	color: white;
+  margin-bottom: -10px;
+  margin-left: -5px;
+  font-size: 30px;
+  color: white;
 }
 
 /* Mobile styles */
 @media only screen and (max-width: 500px) {
-	body {
-		overflow-x: hidden !important;
-		max-width: 100vw !important;
-	}
+  .topsection {
+	position: absolute;
+	top: -15px;
+    width: 100vw;
+    height: 177.78vh;
+    max-height: 100vh;
+  }
 
-	.topsection {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		background-color: #add8e6;
-		margin-top: -2%;
-		width: 100vw;
-		height: 850px;
-		max-width: 100%;
-		min-width: 100%;
-	}
+  .mainherovideo {
+    object-fit: cover;
+    width: 100%;
+    height: 50%;
+  }
 
-	.mainherovideo {
-		position: absolute;
-		top: 0;
-		z-index: 0;
-		max-height: 430px;
-		min-height: 430px;
-		margin-top: 0px;
-		margin-left: 20%;
-	}
+  .switchBox {
+    /* position: absolute; */
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    top: 30px;
+    width: 100vw;
+    height: 177.78vh;
+    max-height: 120vh;
+  }
 
-	.leftTop {
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-		width: 100vw;
-		max-height: 700px;
-		max-width: 100%;
-		min-width: 100%;
-		margin-top: -220px;
-		margin-bottom: 40px;
-	}
-	.rightTop {
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-		width: 100vw;
-		margin-top: -167px;
-		min-height: auto;
-		justify-content: center;
-		text-align: center;
-	}
+  .leftTop {
+    /* position: absolute; */
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 88.89vh;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 5%;
+    z-index: 1;
+    /* background-color: pink; */
+  }
 
-	.webshowsection {
-		position: relative;
-		display: flex;
-		margin-top: 170px;
-		width: 100vw;
-		height: 680px;
-		background-color: #538dbd;
-		align-items: center;
-		justify-content: center;
-		z-index: 0;
-		/* position: static; */
-	}
+  .rightTop {
+    /* position: relative; */
+    left: 50vw;
+    display: flex;
+    flex-direction: column;
+    height: 88.89vh;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    padding-top: 4%;
+    padding-bottom: 5%;
+    background-color: powderblue;
+  }
 
-	.joinusT {
-		margin-bottom: -50px;
-		margin-left: -5px;
-		font-size: 18px;
-		font-weight: bolder;
-		width: 80vw;
-		justify-content: center;
-		text-align: center;
-	}
+  .webshowsection {
+    padding-top: 5%;
+    width: 100vw;
+    height: 100vw;
+  }
 
-	.midsection {
-		display: flex;
-		flex-wrap: wrap;
-		width: 100vw;
-		background-color: white;
-		align-items: center;
-		justify-content: center;
-	}
+  .joinusT {
+    margin-bottom: -50px;
+    margin-left: -5px;
+    font-size: 18px;
+    font-weight: bolder;
+    width: 80vw;
+    justify-content: center;
+    text-align: center;
+  }
 
-	.bottomsection {
-		display: flex;
-		flex-direction: column;
-		background-color: #add8e6;
-		width: 100vw;
-		align-items: center;
-		justify-content: center;
-	}
-	.joinus {
-		margin-bottom: -10px;
-		margin-left: -5px;
-		font-size: 30px;
-		width: 80vw;
-		font-size: 18px;
-		justify-content: center;
-		text-align: center;
-	}
+  .midsection {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+  }
 
-	.whyvideosection {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: row;
-		width: 100vw;
-		background-color: white;
-	}
+  .bottomsection {
+    display: flex;
+    flex-direction: column;
+    background-color: #add8e6;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+  }
+  .joinus {
+    margin-bottom: -10px;
+    margin-left: -5px;
+    font-size: 30px;
+    width: 80vw;
+    font-size: 18px;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .whyvideosection {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100vw;
+    background-color: white;
+  }
 }
