--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@ top: 0;
     position: absolute;
     width: 100vw;
     height: 177.78vh;
-    max-height: 100vh;
+    max-height: 121vh;
   }
 
   .mainherovideo {
@@ -163,7 +163,8 @@ top: 0;
     width: 100vw;
     height: 88.89vh;
     align-items: center;
-    justify-content: center;
+	justify-content: center;
+	padding-top: 5%;
     padding-bottom: 5%;
     z-index: 1;
     /* background-color: pink; */
@@ -180,7 +181,8 @@ top: 0;
     justify-content: center;
     z-index: 1;
     padding-top: 4%;
-    padding-bottom: 5%;
+	padding-bottom: 5%;
+	margin-bottom: -20%;
     background-color: powderblue;
   }
 
@@ -189,7 +191,7 @@ top: 0;
     width: 100vw;
     height: 80vw;
     z-index: 1;
-    /* margin-top: 68vh; */
+    margin-top: 20%;
   }
 
   .headLineBox {
@@ -253,7 +255,7 @@ top: 0;
   .mainherovideo {
     object-fit: cover;
     width: 100%;
-    height: 50%;
+    height: 60%;
   }
 
   .switchBox {
@@ -275,7 +277,8 @@ top: 0;
     width: 100vw;
     height: 88.89vh;
     align-items: center;
-    justify-content: center;
+	justify-content: center;
+	padding-top: 10%;
     padding-bottom: 5%;
     z-index: 1;
     /* background-color: pink; */
@@ -291,12 +294,14 @@ top: 0;
     align-items: center;
     justify-content: center;
     z-index: 1;
-    padding-top: 4%;
-    padding-bottom: 5%;
+    padding-top: 7%;
+	padding-bottom: 10%;
+	margin-bottom: -40%;
     background-color: powderblue;
   }
 
   .webshowsection {
+	margin-top: 40%;
     padding-top: 5%;
     width: 100vw;
     height: 100vw;
