--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,7 @@ top: 0;
     position: absolute;
     width: 100vw;
     height: 177.78vh;
-    max-height: 121vh;
+    max-height: 170vh;
   }
 
   .mainherovideo {
@@ -152,7 +152,7 @@ top: 0;
     top: 45px;
     width: 100vw;
     height: 177.78vh;
-    max-height: 120vh;
+    max-height: 150vh;
   }
 
   .leftTop {
@@ -249,7 +249,7 @@ top: 0;
 	top: -15px;
     width: 100vw;
     height: 177.78vh;
-    max-height: 100vh;
+    max-height: 115vh;
   }
 
   .mainherovideo {
@@ -296,7 +296,7 @@ top: 0;
     z-index: 1;
     padding-top: 7%;
 	padding-bottom: 10%;
-	margin-bottom: -40%;
+	margin-bottom: -20%;
     background-color: powderblue;
   }
 
@@ -352,3 +352,71 @@ top: 0;
     background-color: white;
   }
 }
+
+/* Mobile styles */
+@media only screen and (max-width: 320px) {
+	.topsection {
+	  position: absolute;
+	  top: -15px;
+	  width: 100vw;
+	  height: 177.78vh;
+	  max-height: 110vh;
+	}
+  
+	.mainherovideo {
+	  object-fit: cover;
+	  width: 100%;
+	  height: 80%;
+	}
+  
+	.switchBox {
+	  /* position: absolute; */
+	  display: flex;
+	  flex-direction: column;
+	  left: 0;
+	  top: 30px;
+	  width: 100vw;
+	  height: 177.78vh;
+	  max-height: 140vh;
+	}
+  
+	.leftTop {
+	  /* position: absolute; */
+	  left: 0;
+	  display: flex;
+	  flex-direction: column;
+	  width: 100vw;
+	  height: 88.89vh;
+	  align-items: center;
+	  justify-content: center;
+	  padding-top: 10%;
+	  padding-bottom: 5%;
+	  z-index: 1;
+	  /* background-color: pink; */
+	}
+  
+	.rightTop {
+	  /* position: relative; */
+	  left: 50vw;
+	  display: flex;
+	  flex-direction: column;
+	  height: 88.89vh;
+	  width: 100%;
+	  align-items: center;
+	  justify-content: center;
+	  z-index: 1;
+	  padding-top: 7%;
+	  padding-bottom: 20%;
+	  margin-bottom: -40%;
+	  background-color: powderblue;
+	}
+  
+	.webshowsection {
+	  margin-top: 40%;
+	  padding-top: 5%;
+	  width: 100vw;
+	  height: 100vw;
+	}
+  
+  }
+  
