--- a/src/App.css
+++ b/src/App.css
@@ -420,3 +420,69 @@ top: 0;
   
   }
   
+/* Mobile styles */
+@media only screen and (max-width: 200px) {
+	.topsection {
+	  position: absolute;
+	  top: -15px;
+	  width: 100vw;
+	  height: 177.78vh;
+	  max-height: 110vh;
+	}
+  
+	.mainherovideo {
+	  object-fit: cover;
+	  width: 100%;
+	  height: 80%;
+	}
+  
+	.switchBox {
+	  /* position: absolute; */
+	  display: flex;
+	  flex-direction: column;
+	  left: 0;
+	  top: 30px;
+	  width: 100vw;
+	  height: 177.78vh;
+	  max-height: 160vh;
+	}
+  
+	.leftTop {
+	  /* position: absolute; */
+	  left: 0;
+	  display: flex;
+	  flex-direction: column;
+	  width: 100vw;
+	  height: 88.89vh;
+	  align-items: center;
+	  justify-content: center;
+	  padding-top: 10%;
+	  padding-bottom: 5%;
+	  z-index: 1;
+	  /* background-color: pink; */
+	}
+  
+	.rightTop {
+	  /* position: relative; */
+	  left: 50vw;
+	  display: flex;
+	  flex-direction: column;
+	  height: 88.89vh;
+	  width: 100%;
+	  align-items: center;
+	  justify-content: center;
+	  z-index: 1;
+	  padding-top: 7%;
+	  padding-bottom: 20%;
+	  margin-bottom: -40%;
+	  background-color: powderblue;
+	}
+  
+	.webshowsection {
+	  margin-top: 40%;
+	  padding-top: 5%;
+	  width: 100vw;
+	  height: 100vw;
+	}
+  
+  }
