--- a/src/components/logo.css
+++ b/src/components/logo.css
@@ -21,6 +21,42 @@
   padding-left: 10px;
 }
 
+.SMlogos{
+  cursor: pointer;
+  position: fixed;
+  top: 7px;
+  right: 190px;
+  border: 1px solid white;
+  background-color: #355d71;
+  border-radius: 30px;
+  height: 30px;
+  width: 30px;
+}
+
+.SMlogos1{
+  cursor: pointer;
+  position: fixed;
+  top: 7px;
+  right: 150px;
+  border: 1px solid white;
+  background-color: #355d71;
+  border-radius: 30px;
+  height: 30px;
+  width: 30px;
+}
+
+.SMlogos2{
+  cursor: pointer;
+  position: fixed;
+  top: 7px;
+  right: 110px;
+  border: 1px solid white;
+  background-color: #355d71;
+  border-radius: 30px;
+  height: 30px;
+  width: 30px;
+}
+
 .logoname {
   position: fixed;
   top: 0;
