--- a/src/components/logo.css
+++ b/src/components/logo.css
@@ -87,7 +87,7 @@
     .logocontainer {
         display: flex;
         flex-direction: row;
-        background-color: #355d71;
+        background-color: #538dbd;
         height: 30px;
         width: 100vw;
         top: 0;
@@ -110,6 +110,42 @@
         margin-top: 3px;
         margin-left: 35px;
         font-size: 18px;
+      }
+
+      .SMlogos{
+        cursor: pointer;
+        position: fixed;
+        top: 5px;
+        right: 160px;
+        border: 1px solid white;
+        background-color: #355d71;
+        border-radius: 20px;
+        height: 20px;
+        width: 20px;
+      }
+      
+      .SMlogos1{
+        cursor: pointer;
+        position: fixed;
+        top: 5px;
+        right: 130px;
+        border: 1px solid white;
+        background-color: #355d71;
+        border-radius: 20px;
+        height: 20px;
+        width: 20px;
+      }
+      
+      .SMlogos2{
+        cursor: pointer;
+        position: fixed;
+        top: 5px;
+        right: 100px;
+        border: 1px solid white;
+        background-color: #355d71;
+        border-radius: 20px;
+        height: 20px;
+        width: 20px;
       }
 
       .buttonstyler{
